<resources>
    <string name="app_name">Remove China Apps</string>
    <string name="app_found_count">&lt;b&gt;%1$d China Apps&lt;/b&gt; Found</string>
    <string name="awesome_txt">You are Awesome, No China App Found in your system.</string>
    <string name="clickscantext">Click on \"&lt;b&gt;Scan Now\"&lt;/b&gt; to find installed China Apps in your system.</string>
    <string name="congratulation">Congratulation</string>
    <string name="contact_us">Contact us</string>
    <string name="contact_us_url">https://www.onetouchapplabs.com/</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_url">https://www.onetouchapplabs.com/privacy-policy</string>
    <string name="rate_us">Rate us</string>
    <string name="rescan">Re-scan Now</string>
    <string name="scannow">Scan now</string>
    <string name="share">Share</string>
    <string name="sharethisapp">Share This App</string>
  <string name="font_poppins_regular">Poppins-Regular</string>
</resources>