<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/dragonIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:src="@drawable/ic_icon_with_dragon" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/doneIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:src="@drawable/ic_done_icon"
                android:visibility="gone" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:id="@+id/scan_ui"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:visibility="visible">

                    <com.chinaappsremover.utils.uihelper.CustomFontTextView
                        android:id="@+id/scan_now_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="25dp"
                        android:gravity="center"
                        android:text="@string/clickscantext"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:custom_font="@string/font_poppins_regular" />

                    <com.chinaappsremover.utils.uihelper.CustomFontButton
                        android:id="@+id/scan_now"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginBottom="25dp"
                        android:background="@drawable/rounded__corner_btn"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:text="@string/scannow"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textStyle="bold" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/listLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:visibility="gone">

                    <com.chinaappsremover.utils.uihelper.CustomFontTextView
                        android:id="@+id/app_found_count"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="25dp"
                        android:gravity="center"
                        android:text="@string/app_found_count"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:custom_font="@string/font_poppins_regular" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/app_found_count"
                        android:layout_marginTop="15dp"
                        android:scrollbars="vertical"
                        android:visibility="visible" />

                    <com.chinaappsremover.utils.uihelper.CustomFontButton
                        android:id="@+id/rescan_now"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginBottom="25dp"
                        android:background="@drawable/rounded__corner_btn"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:text="@string/rescan"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:visibility="gone" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/noappsfoundLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:orientation="vertical">

                        <com.chinaappsremover.utils.uihelper.CustomFontTextView
                            android:id="@+id/congratulation_txt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="25dp"
                            android:gravity="center"
                            android:text="@string/congratulation"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            app:custom_font="@string/font_poppins_regular" />

                        <com.chinaappsremover.utils.uihelper.CustomFontTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/congratulation_txt"
                            android:layout_centerInParent="true"
                            android:layout_gravity="center"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:text="@string/awesome_txt"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/black"
                            app:custom_font="@string/font_poppins_regular" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <com.chinaappsremover.utils.uihelper.CustomFontTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/congratulation_txt"
                            android:layout_gravity="center_vertical"
                            android:gravity="center_vertical"
                            android:text="@string/sharethisapp"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/black"
                            app:custom_font="@string/font_poppins_regular" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/shareIcon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="15dp"
                            android:padding="5dp"
                            android:src="@drawable/share_24_px" />
                    </LinearLayout>
                </RelativeLayout>

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="gone" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>